responsive layout fixed in case of too much menu items

--- a/public/styleSheets/ownBootstrap.css
+++ b/public/styleSheets/ownBootstrap.css
@@ -1,4 +1,5 @@
 .subnav {
+  margin: 0 auto;
   width: 100%;
 /*  height: 36px;*/
   background-color: #eeeeee; /* Old browsers */
@@ -17,6 +18,7 @@
 }
 .subnav .nav {
   margin-bottom: 0;
+  float: none;
 }
 .subnav .nav > li > a {
   margin: 0;
@@ -62,9 +64,12 @@
 
 /* Fixed subnav on scroll, but only for 980px and up (sorry IE!) */
 @media (min-width: 980px) {
+  .navbar {
+    margin-bottom: 0px !important;
+  }
   .subnav-fixed {
-    position: fixed;
-    top: 40px;
+    /*position: fixed;*/
+    /*top: 40px;*/
     left: 0;
     right: 0;
     z-index: 1030;
@@ -94,12 +99,7 @@
   text-align: center;
 }
 
-body {
-  padding-top: 90px;
-}
-
 @media (max-width: 768px) {
-
   /* Remove any padding from the body */
   body {
     padding-top: 0;
